--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020", 
     "outDir": "./dist",
     "module": "commonjs",
+    "typeRoots": ["./node_modules/@types/"],
     "lib": [], 
     "sourceMap": true,
     "moduleResolution":"node",
