--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "sebastian",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node ./build/index.js",
     "build:start": "npm run build & npm run start"
   },
+  "engines": {
+    "node": "15.3.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/node": "^16.4.8",
-    "typescript": "^4.3.5"
+    "@types/dotenv": "8.2.0",
+    "@types/node": "16.4.8",
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.1",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "uuid": "^8.3.2"
+    "@types/uuid": "8.3.1",
+    "discord.js": "12.5.3",
+    "dotenv": "10.0.0",
+    "uuid": "8.3.2"
   }
 }
