--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./build/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./build/index.js",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register build/index.js",
     "build:start": "npm run build & npm run start"
   },
   "engines": {
@@ -15,14 +15,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "0.14.0",
     "@types/dotenv": "8.2.0",
     "@types/node": "16.4.8",
+    "@types/uuid": "8.3.1",
     "typescript": "4.3.5"
   },
   "dependencies": {
-    "@types/uuid": "8.3.1",
+    "axios": "0.21.1",
+    "class-transformer": "0.4.0",
+    "class-validator": "0.13.1",
     "discord.js": "12.5.3",
     "dotenv": "10.0.0",
-    "uuid": "8.3.2"
+    "monet": "0.9.2",
+    "reflect-metadata": "0.1.13",
+    "uuid": "8.3.2",
+    "ts-node": "10.1.0",
+    "tsconfig-paths": "3.10.1"
   }
 }
