--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/axios": "0.14.0",
     "@types/dotenv": "8.2.0",
+    "@types/express": "4.17.13",
     "@types/node": "16.4.8",
     "@types/uuid": "8.3.1",
     "typescript": "4.3.5"
@@ -27,10 +28,11 @@
     "class-validator": "0.13.1",
     "discord.js": "12.5.3",
     "dotenv": "10.0.0",
+    "express": "4.17.1",
     "monet": "0.9.2",
     "reflect-metadata": "0.1.13",
-    "uuid": "8.3.2",
     "ts-node": "10.1.0",
-    "tsconfig-paths": "3.10.1"
+    "tsconfig-paths": "3.10.1",
+    "uuid": "8.3.2"
   }
 }
